--- a/app/globals.css
+++ b/app/globals.css
@@ -81,8 +81,8 @@ body {
   width: 1.2rem;
   aspect-ratio: 1;
   border-radius: 50%;
-  background: radial-gradient(farthest-side, #047857 75%, #0000) top/4px 4px no-repeat,
-    conic-gradient(#0000 60%, #047857);
+  background: radial-gradient(farthest-side, #ffffff 75%, #0000) top/4px 4px no-repeat,
+    conic-gradient(#0000 60%, #ffffff);
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 4px), #000 0);
   animation: rotate 1s infinite linear;
 }
